feat: API sala CRUD endpoints
