# server/middlewares/auth.middleware.js
@@ -2,8 +2,11 @@ const jwt = require("jsonwebtoken");
 
 function verifyToken(req, res, next) {
     let token = req.header('Authorization');
-    
     if (!token) return res.status(401).json({ error: 'Access denied' });
+
+    if (token.startsWith("Bearer ")) {
+        token = token.slice(7).trim();
+    }
     try {
         const decoded = jwt.verify(token, process.env.JWT_SECRET);
         req.userId = decoded.userId;
